<resources>
    <string name="app_name">Chat</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signinFailed">Username or password didn\'t match</string>
    <string name="missingField">Field can\'t be empty</string>
    <string name="passwordAgain">Password again</string>
    <string name="fullName">Full name</string>
    <string name="register">Register</string>
    <string name="passwordsMismatch">The two passwords don\'t match</string>
    <string name="errorDuringConnection">Data exchange failed.</string>
    <string name="successfulRegistration">Successful registration, please login!</string>
    <string name="newContactTitle">Username of new contact</string>
    <string name="newContactAdd">Add</string>
    <string name="newContactCancel">Cancel</string>
    <string name="newContactSuccess">User added to contacts</string>
    <string name="dateFormat">yy/MM/dd</string>
    <string name="hourFormat">HH:mm</string>
    <string name="menu_add_contact">Add contact</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="messages_new_message_placeholder">Type your text here...</string>
    <string name="new_contact_username_hint">Username</string>

</resources>